# gqcnn

./: .gitignore  CMakeLists.txt  README.md  setup.py
docker/: README.md
docker/gpu/: Dockerfile_Focal
gqcnn/: CMakeLists.txt  package.xml
gqcnn/config/: ros.yaml
gqcnn/examples/: antipodal_grasp_sampling.py  policy.py  policy_camera_ros2.py  policy_ros.py  policy_ros2.py  test_image_sub.py
gqcnn/gqcnn/model/tf/: fc_network_tf.py  network_tf.py
gqcnn/gqcnn/training/tf/: trainer_tf.py
gqcnn/gqcnn/utils/: enums.py
gqcnn/gqcnn_lib/model/tf/: network_tf.py
gqcnn/launch/: grasp_planning_service.launch.py
gqcnn/ros_nodes/: grasp_planner_node.py
gqcnn/tools/: plot_training_losses.py
gqcnn_interfaces/: CMakeLists.txt  package.xml
gqcnn_interfaces/msg/: BoundingBox.msg
launch/: grasp_planning_service.launch
requirements/: gpu_requirements.txt
ros_nodes/: grasp_planner_node.py
scripts/docker/: build-docker.sh
